# GothicParallelRealms

./: .gitignore  CMakeLists.txt  README.md
MonitoringServer/: CMakeLists.txt
MonitoringServer/src/: IniData.h  main.cpp
common/lib/inih/: README.txt
common/src/: IniManager.cpp  IniManager.h
common/src/Async/: Async.cpp  Async.h  AsyncUnorderedMap.cpp  AsyncUnorderedMap.h  AsyncVector.cpp  AsyncVector.h
common/src/Network/: PackagingSystem.cpp  PackagingSystem.h  Packets.h
server/: CMakeLists.txt
server/src/: CommonStructures.h  Data.h  IniData.h  MessageHandler.cpp  MessageHandler.h  PackagingSystem.cpp  PackagingSystem.h  PacketIDs.h  Packets.h  ServerManager.cpp  ServerManager.h  main.cpp
server/src/Monitoring/: MonitoringClient.cpp  MonitoringClient.h
src/: dllmain.cpp
src/Logic/: GameThreadWorker.cpp  GameThreadWorker.h  ImGuiManager.cpp  ImGuiManager.h  MessageGameThreadManager.cpp  MessageGameThreadManager.h  sMain.cpp  sMain.h
src/Models/: Addresses.h  DataStructures.h  Debugging.h  GlobalFunctions.cpp  GlobalFunctions.h  ImGuiData.cpp  ImGuiData.h  IniData.h  Npc.cpp  Npc.h  NpcInformation.cpp  NpcInformation.h  Player.cpp  Player.h
src/Network/: Client.cpp  Client.h  DataChangeNotifier.cpp  DataChangeNotifier.h  HandleConnection.cpp  HandleConnection.h  MessageHandler.cpp  MessageHandler.h
src/Wrapper/: OCGame.cpp  OCGame.h  OCNpc.cpp  OCNpc.h  OCSpawnManager.cpp  OCSpawnManager.h  OCWorld.cpp  OCWorld.h  ZCOLOR.cpp  ZCOLOR.h  ZCView.cpp  ZCView.h  ZCVob.cpp  ZCVob.h  ZVec3.cpp  ZVec3.h  basic_string.cpp  basic_string.h  oCItem.cpp  oCItem.h  oCMsgWeapon.cpp  oCMsgWeapon.h  oCObjectFactory.cpp  oCObjectFactory.h  zCModel.cpp  zCModel.h  zMAT4.cpp  zMAT4.h  zSTRING.cpp  zSTRING.h
